--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -68,24 +68,7 @@
     reserved.
   </footer>
 </div>
+<%= javascript_include_tag "app" %>
 <!-- ./wrapper -->
-
-<!--
-<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script src="plugins/morris/morris.min.js" type="text/javascript"></script>
-<script src="plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
-<script src="plugins/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
-<script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
-<script src="plugins/knob/jquery.knob.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js" type="text/javascript"></script>
-<script src="plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
-<script src="plugins/datepicker/bootstrap-datepicker.js" type="text/javascript"></script>
-<script src="plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
-<script src="plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-<script src='plugins/fastclick/fastclick.min.js'></script>
-<script src="dist/js/app.min.js" type="text/javascript"></script>
-<script src="dist/js/pages/dashboard.js" type="text/javascript"></script>
-<script src="dist/js/demo.js" type="text/javascript"></script>
--->
 </body>
 </html>
