--- a/app/views/shared/side-menu.erb
+++ b/app/views/shared/side-menu.erb
@@ -30,8 +30,8 @@
           <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-          <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-          <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+          <li><a href="projects/new.html"><i class="fa fa-circle-o"></i> Create Project </a></li>
+         <li><a href="projects/choose.html"><i class="fa fa-circle-o"></i> Choose Project </a></li>
         </ul>
       </li>
       <li class="treeview">
