--- a/app/views/shared/side-menu.erb
+++ b/app/views/shared/side-menu.erb
@@ -30,22 +30,17 @@
           <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-          <li><a href="projects/new.html"><i class="fa fa-circle-o"></i> Create Project </a></li>
-         <li><a href="projects/choose.html"><i class="fa fa-circle-o"></i> Choose Project </a></li>
          <li><a href="/users/"><i class="fa fa-user"></i> <span>Users</span></a></li>
         </ul>
       </li>
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-files-o"></i>
-          <span>Layout Options</span>
-          <span class="label label-primary pull-right">4</span>
+          <i class="fa fa-book"></i>
+          <span>Projects</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
-          <li><a href="pages/layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-          <li><a href="pages/layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-          <li><a href="pages/layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-          <li><a href="pages/layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+          <li><a href="/projects/"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a href="/projects/new"><i class="fa fa-circle-o"></i> New</a></li>
         </ul>
       </li>
       <li>
