--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -6,6 +6,7 @@
     <div class="col-md-6 col-md-offset-3">
       <%= form_for(@project, :html => {:class => "form-signin"}) do |f| %>
           <h2 class="form-signin-heading">New project</h2>
+          <%= render 'shared/project_error_messages' %>
           <div class="top-buffer"/>
           <%= f.text_field :name, class: 'form-control', placeholder: :name %>
           <div class="top-buffer"/>
