added foreign key migrations, layout fixes, tasks done

--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -3,7 +3,7 @@
     Projects
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-user"></i> Project</a></li>
+    <li><a href="#"><i class="fa fa-book"></i> Project</a></li>
     <li class="active">Projects</li>
   </ol>
 </section>
