--- a/app/views/shared/side-menu.erb
+++ b/app/views/shared/side-menu.erb
@@ -43,6 +43,16 @@
           <li><a href="/projects/new"><i class="fa fa-circle-o"></i> New</a></li>
         </ul>
       </li>
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-tasks"></i>
+          <span>Tasks</span> <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="/tasks/"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a href="/tasks/new"><i class="fa fa-circle-o"></i> New</a></li>
+        </ul>
+      </li>
       <li>
         <a href="pages/widgets.html">
           <i class="fa fa-th"></i> <span>Widgets</span>
