--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,7 @@
     <%= @project.name %>
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-library"></i>Project</a></li>
+    <li><a href="#"><i class="fa fa-book"></i>Project</a></li>
     <li class="active"><%= @project.name %></li>
   </ol>
 </section>
