--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
 <section class="content-header">
   <h1>
-    Listing Tasks
+    Tasks
   </h1>
   <ol class="breadcrumb">
     <li><a href="#"><i class="fa fa-tasks"></i> Tasks</a></li>
@@ -13,50 +13,24 @@
     <% @tasks.each do |task| %>
         <%= link_to(task, :class => "list-group-item col-md-12") do %>
             <div class="col-md-10">
-            <span>
-              <table>
-                <thead>
-                  <tr>
-                    <th>Id</th>
-                    <th>Project</th>
-                    <th>Name</th>
-                    <th>Parent</th>
-                    <th>Description</th>
-                    <th>Created by</th>
-                    <th>Closed by</th>
-                    <th>Assignee</th>
-                    <th>Created at</th>
-                    <th>Closed at</th>
-                    <th>Estimate</th>
-                    <th>Task state</th>
-                    <th colspan="3"></th>
-                  </tr>
-                </thead>
-
-                <tbody>
-                    <tr>
-                      <td><%= task.id %></td>
-                      <td><%= task.project_id %></td>
-                      <td><%= task.name %></td>
-                      <td><%= task.parent_id %></td>
-                      <td><%= task.description %></td>
-                      <td><%= task.created_by %></td>
-                      <td><%= task.closed_by %></td>
-                      <td><%= task.assignee %></td>
-                      <td><%= task.created_at %></td>
-                      <td><%= task.closed_at %></td>
-                      <td><%= task.estimate %></td>
-                      <td><%= task.task_state %></td>
-                      <td><%= link_to 'Edit', edit_task_path(task) %></td>
-                      <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                    </tr>
-                </tbody>
-              </table>
-            </span>
+              <span>
+                <p><b><%= task.name %></b></p>
+                <p><%= task.description %></p>
+                <p><%= task.assignee %></p>
+                <table>
+                  <div class="pull-left">
+                    <%= link_to 'Edit', edit_task_path(task), :class => "btn btn-default" %>
+                  </div>
+                  <div class="pull-left">
+                    <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-default" %>
+                  </div>
+                </table>
+                <div class="form-group row">
+                  <label class="pull-right">Created at <%= task.created_at.strftime('%d %b %Y') %></label>
+                </div>
+              </span>
             </div>
         <% end %>
     <% end %>
   </ul>
 </section>
-
-<%= link_to 'New Task', new_task_path %>
