--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,11 +9,98 @@
 </section>
 
 <section class="content">
+  <ul class="list-group">
+
+    <div class="list-group-item col-md-12 ">
+      <div class="col-md-1">
+        <%= image_tag(@project.avatarFileName, :class => 'img-circle img-responsive', :alt => "Project Image") %>
+      </div>
+      <div class="col-md-10">
+        <span>
+          <div class="col-md-6">
+            <p><b><%= @project.name %></b></p>
+
+            <p><%= @project.description %></p>
+          </div>
+           <div class="col-md-4">
+             <p>Starts <%= @project.start_time %></p>
+
+             <p>Ends <%= @project.end_time %></p>
+           </div>
+             <div class="col-md-2">
+               <p class="pull-right"><%= link_to "Edit", edit_project_path(@project) %></p>
+             </div>
+        </span>
+      </div>
+    </div>
+  </ul>
+  <div class="col-md-12">
+    <br/>
+  </div>
+
+  <div class="col-md-4 ">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Open
+      </div>
+      <div class="panel-body">
+        <ul class="list-group">
+          <% @project.tasks.where(task_state: 0).each do |task| %>
+              <li class="list-group-item col-md-12" draggable="true">
+                <p><b><%= link_to task.name, task %></b></p>
+
+                <p><%= task.description %></p>
+              </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        In Progress
+      </div>
+      <div class="panel-body">
+        <ul class="list-group">
+          <% @project.tasks.where(task_state: 1).each do |task| %>
+              <li class="list-group-item col-md-12" draggable="true">
+                <p><b><%= link_to task.name, task %></b></p>
+
+                <p><%= task.description %></p>
+              </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        Closed
+      </div>
+      <div class="panel-body">
+        <ul class="list-group">
+          <% @project.tasks.where(task_state: 2).each do |task| %>
+              <li class="list-group-item col-md-12" draggable="true">
+                <p><b><%= link_to task.name, task %></b></p>
+
+                <p><%= task.description %></p>
+              </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!--
   <div class="col-md-8">
     <%= form_for(@project, :html => {:class => 'form'}) do |f| %>
         <div class="row">
-          <div class="box box-primary">
             <div class="box-body">
+          <div class="box box-primary">
               <div class="box-header">
                 <h3 class="box-title">Project Settings</h3>
               </div>
@@ -61,16 +148,16 @@
             <div class="box-footer">
               <div class="form-group column">
                 <button_to class="pull-right">
-                  <%= button_to 'Update', @project, method: :update, :class => "btn btn-default"%>
+                  <%= button_to 'Update', @project, method: :update, :class => "btn btn-default" %>
                 </button_to>
                 <button_to class="pull-left">
-                  <%= button_to 'Delete', @project, method: :delete, data: { confirm: 'Are you sure you want to delete this project?' },  :class => "btn btn-default"%>
+                  <%= button_to 'Delete', @project, method: :delete, data: {confirm: 'Are you sure you want to delete this project?'}, :class => "btn btn-default" %>
                 </button_to>
               </div>
             </div>
         <% end %>
           </div>
         </div>
-    <% end %>
+    <% end %>-->
   </div>
 </section>
