Updated Task view/edit. Removed additional properties(view only)

--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -18,7 +18,9 @@
             <div class="col-md-10">
             <span>
                 <p><b><%= project.name %></b></p>
-                <p><%= project.description %> <%= project.start_time %><%= project.end_time %></p>
+                <p><%= project.description %></p>
+                <p><%= project.start_time %>></p>
+                <p><%= project.end_time %></p>
             </span>
             </div>
         <% end %>
