--- a/app/assets/stylesheets/AdminLTE.css
+++ b/app/assets/stylesheets/AdminLTE.css
@@ -1557,8 +1557,10 @@ input[type="password"] {
     background: #ffffff;
     border-top: 3px solid #d2d6de;
     margin-bottom: 20px;
+    margin-right: 20px;
     width: 100%;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+
 }
 .box.box-primary {
     border-top-color: #3c8dbc;
