--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, "Log in") %>
+<% provide(:title, "Create New Project") %>
 
 <div class="wrapper2">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user, :html => {:class => "form-signin"}) do |f| %>
-        <h2 class="form-signin-heading">Please login</h2>
+        <h2 class="form-signin-heading">New Project</h2>
         <%= render 'shared/error_messages' %>
         <div class="top-buffer"/>
         <%= f.text_field :name, class: 'form-control', placeholder: :name %>
