--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -9,7 +9,7 @@
 </section>
 
 <section class="content">
-  <div class="col-md-5  ">
+  <div class="col-md-5">
     <div class="box box-primary">
       <div class="box-body">
         <div class="box-header">
@@ -57,8 +57,30 @@
           <%= @task.task_state_name %>
         </p>
 
+        <%= link_to 'Log work', ('/work_logs?id=' + @task.id.to_s) %> |
         <%= link_to 'Edit', edit_task_path(@task) %> |
         <%= link_to 'Back', tasks_path %>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-5">
+    <div class="box box-primary">
+      <div class="box-body">
+        <div class="box-header">
+          <h3 class="box-title">History</h3>
+        </div>
+
+        <ul class="list-group">
+          <% @task.work_logs.each do |workLog| %>
+              <li class="list-group-item col-md-12">
+                <p><%= link_to workLog.user.fullName, workLog.user %> logged <%= workLog.value %>h spent at project</p>
+                <% if !workLog.comment.empty? %>
+                    <p><b>Comment:</b> <%= workLog.comment %></p>
+                <% end %>
+              </li>
+          <% end %>
+        </ul>
+
       </div>
     </div>
   </div>
