--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -12,8 +12,8 @@
                 <%= render 'shared/task_error_messages' %>
                 <div class="form-group row">
                   <%= f.label :project_id, class: 'col-sm-1 control-label' %>
-                  <div class="col-sm-9">
-                    <%= f.select :project_id, options_from_collection_for_select(@projects, :id, :name) %>
+                  <div class="col-sm-8 control-select">
+                    <%= select_tag "project_id_tag", options_from_collection_for_select(@projects, :id, :name), :class => "form-control" %>
                   </div>
                 </div>
                 <div class="form-group row">
@@ -33,8 +33,8 @@
                 </div>
                 <div class="form-group row">
                   <%= f.label :assignee, class: 'col-sm-1 control-label' %>
-                  <div class="col-sm-9">
-                    <%= f.select :assignee, options_from_collection_for_select(@users, :id, :fullName) %>
+                  <div class="col-sm-8">
+                    <%= select_tag "assignee_tag", options_from_collection_for_select(@users, :id, :fullName), :class => "form-control" %>
                   </div>
                 </div>
                 <div class="form-group row">
