--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 </section>
 
 <section class="content">
-  <div class="col-md-8">
+  <div class="col-md-7">
     <%= form_for(@user, :html => {:class => 'form'}) do |f| %>
         <div class="row">
           <div class="box box-primary">
@@ -18,15 +18,10 @@
               <div class="box-header">
                 <h3 class="box-title">User Profile</h3>
               </div>
-              <div class="col-md-5">
-                <div class="box-body">
-                  <%= image_tag(@user.avatarFileName, :class => 'img-responsive') %>
-                  <% if (!@readOnly) %>
-                      <%= f.file_field :avatarFileName %>
-                  <% end %>
-                </div>
+              <div class="col-md-4">
+                <%= image_tag(@user.avatarFileName, :class => 'img-responsive') %>
               </div>
-              <div class="col-md-7">
+              <div class="col-md-8">
                 <div class="form-group row">
                   <%= f.label :name, class: 'col-sm-2 control-label' %>
                   <div class="col-sm-9">
@@ -58,13 +53,36 @@
                 </div>
               </div>
             </div>
-        <% if (!@readOnly) %>
-            <div class="box-footer">
-              <%= f.submit "Submit", class: "btn btn-default" %>
-            </div>
-        <% end %>
+            <% if (!@readOnly) %>
+                <div class="box-footer">
+                  <%= f.submit "Submit", class: "btn btn-default" %>
+                </div>
+            <% end %>
           </div>
         </div>
     <% end %>
+  </div>
+  <div class="col-md-5">
+    <div class="box box-primary">
+      <div class="box-body">
+        <div class="box-header">
+          <h3 class="box-title">Work history</h3>
+        </div>
+        <% @user.work_logs.take(8).each do |workLog| %>
+            <li class="list-group-item">
+              <p>Logged <b><%= workLog.value %>h</b> spent at project <%= link_to workLog.task.name, workLog.task %> at <%=workLog.created_at.strftime("%b/%d %R") %></p>
+              <% if !workLog.comment.empty? %>
+                  <p><b>Comment:</b> <%= workLog.comment %></p>
+              <% end %>
+            </li>
+        <% end %>
+        <% if @user.work_logs.count > 8 %>
+            <li class="list-group-item">And more... </li>
+        <% end %>
+        <% if @user.work_logs.empty? %>
+            <li class="list-group-item"> No history yet</li>
+        <% end %>
+      </div>
+    </div>
   </div>
 </section>
