--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,24 +1,29 @@
 <% provide(:title, "New Task") %>
 
 <section class="content">
-    <div class="wrapper2">
-      <div class="col-md-6 col-md-offset-3">
-        <%= form_for(@task, :html => {:class => "form-signin"}) do |f| %>
-            <h2 class="form-signin-heading">New Task</h2>
-            <%= render 'shared/task_error_messages' %>
-            <div class="top-buffer"/>
-            <%= f.text_field :name, class: 'form-control', placeholder: :name %>
-            <div class="top-buffer"/>
-            <%= select_tag "project_id_tag", options_from_collection_for_select(@projects.order(:id), :id, :name), :class => "form-control" %>
-            <div class="top-buffer"/>
-            <%= f.text_area :description, class: 'form-control', placeholder: :description  %>
-            <div class="top-buffer"/>
-            <%= select_tag "assignee_tag", options_from_collection_for_select(@users.order(:id), :id, :fullName), :class => "form-control" %>
-            <div class="top-buffer"/>
-            <%= f.text_field :estimate, class: 'form-control', placeholder: :estimate  %>
-            <div class="top-buffer"/><br/>
-            <%= f.submit "Create Task", class: "btn btn-primary" %>
-        <% end %>
-      </div>
+  <div class="wrapper2">
+    <div class="col-md-6 col-md-offset-3">
+      <%= form_for(@task, :html => {:class => "form-signin"}) do |f| %>
+          <h2 class="form-signin-heading">New Task</h2>
+          <%= render 'shared/task_error_messages' %>
+          <div class="top-buffer"/>
+          <%= f.text_field :name, class: 'form-control', placeholder: :name %>
+          <div class="top-buffer"/>
+          <% if @selected_project %>
+              <%= f.hidden_field :project_id, value: @selected_project.id %>
+          <% else %>
+              <%= select_tag "project_id_tag", options_from_collection_for_select(@projects.order(:id), :id, :name), :class => "form-control" %>
+          <% end %>
+          <div class="top-buffer"/>
+          <%= f.text_area :description, class: 'form-control', placeholder: :description %>
+          <div class="top-buffer"/>
+          <%= select_tag "assignee_tag", options_from_collection_for_select(@users.order(:id), :id, :fullName), :class => 'form-control' %>
+          <div class="top-buffer"/>
+          <%= f.text_field :estimate, class: 'form-control', placeholder: :estimate %>
+          <div class="top-buffer"/>
+          <br/>
+          <%= f.submit "Create Task", class: "btn btn-primary" %>
+      <% end %>
     </div>
+  </div>
 </section>
